# pyparticle

./: .gitignore  5  AI_NEXT_STEPS.md  AI_PROMPT_viz_refactor.md  AI_REQUEST_DATA_PREP.md  CHANGELOG.md  CLEANUP_PLAN.md  LICENSE  ONBOARDING.md  OVERVIEW.md  README.md  codecov.yml  demo.py  demo__binned_lognormal.py  demo_batchit.py  environment-dev.yml  environment-partmc.yml  environment.yml  example.py  helper_train_emulator.py  helper_train_emulator_v1.py  main_run_ppe.py  main_run_ppe_batchit.py  main_train_emulator.py  optics.py  paper.bib  paper.md  paper_old.md  patch.py  ppe.py  pyproject.toml  pytest.ini  reader.py  run.sh  setup.cfg  setup.py  tests.py  untitled0.py
.github/: copilot-instructions.md
.github/workflows/: ci-codecov.yml  ci.yml  test-and-coverage.yml
EmulatorTrainer/: helper_store_ensemble.py  helper_train_emulator.py  main_run_ppe.py  main_store_processed_ensemble.py  main_train_emulator.py  main_train_emulator_v1.py  ppe.py  untitled0.py  visualizer.py
PyParticle/: __init__.py  aerosol_particle.py  aerosol_species.py  optics.py  particle_population.py  utilities.py
PyParticle/PopulationBuilder/: __init__.py  binned_lognormal.py  monodisperse.py
PyParticle/builder/: __init__.py  binned_lognormal.py  monodisperse.py  partmc.py  quadrature.py
PyParticle/optics/: __init__.py  base.py  core_shell.py  homogeneous.py
archive/docs/: index.md  quickstart.md
archive/pyparticle-legacy/: analysis_archive.py
archive/removed_250925/: base copy.py  compare_bscat_vs_wvl copy.py  compare_bscat_vs_wvl.py  compare_pymiescatt.py  conftest.py  (+9 more)
demos/: demo__binned_lognormal.py  demo_batchit.py  example.py
docs/: api_summary.md
examples/: 01_lognormal.ipynb  01_optics_lognormal_mixtures.ipynb  01_optics_lognormals copy.ipynb  01_optics_lognormals.ipynb  02_optics_morphologies.ipynb  04_inp_monodisperse_vs_lognormal.ipynb  04_optics_lognormals_comparePyMieScatt.ipynb  README.md  binned_lognormal_with_homog_optics.py  bscat_diagnostic.py  check_axes_scales.py  compare_bscat_vs_wvl.py  compare_pymiescatt.py  compare_pyrcel.py  core_shell_binned_lognormal.py  example_binned_lognormal_with_CS_optics.py  homogeneous_binned_lognormal.py  model_helpers.py  partmc_demo.py  vis_lognormals_onevar.py  viz_grid_partmc_and_mam4.py  viz_grid_partmc_scenarios.py  viz_grid_scenarios_variables.py
partmc/: Containerfile  readme.md
test/: binned_lognormal.py  pytest.ini  readme.md  test.py
test_old/: binned_lognormal.py  test.py  tests.py
tests/: README.md  __init__.py  conftest.py  run_all_comparisons.py  test_basic.py  test_basic_archive.py  test_examples_discovery.py  test_package_smoke.py  test_population_builders.py  test_population_building.py  test_smoke.py  test_species_registry.py
tests_archive/: README.md  conftest.py  pytest.ini  run_all_comparisons.py  utils.py
tools/: inspect_population.py  run_integration.sh  run_pymiescatt_cmp.py
(+177 files in other folders)
