[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "unit: fast unit tests",
  "examples: example discovery or execution",
  "integration: slower integration tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["PyParticle", "src/PyParticle"]
omit = [
  "tests/*",
  "setup.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
