[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyparticle"
version = "0.1.0"
readme = "README.md"
description = "Describing and analyzing aerosol particles and particle populations"
license = { text = "MIT" }
authors = [ { name = "Laura Fierce" } ]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "PyMieScatt>=1.14",
    "pyrcel>=0.4",
    "matplotlib",
]
optics = ["PyMieScatt>=1.14"]
integration = ["pyrcel>=0.4"]
partmc = ["netCDF4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
PyParticle = ["datasets/*", "datasets/species_data/*"]
